# RQE-MAPPO

./: .gitignore  BUGS_FOUND.md  README.md  demo.sumocfg  pyproject.toml  test_fixes.py
docs/: SUMO_SETUP.md  TRAFFIC_SCENARIOS.md  VISUALIZATION.md
proposal/: BASELINE_IMPLEMENTATIONS.md  risk_gradient_derivation.lean
scripts/: evaluate_and_render.py  monitor_training.sh  quick_test.sh  quick_test_psro_rqe.py  quick_test_sumo.sh  quick_test_traffic.sh  record_sumo.sh  render_boxing.py  render_cliffwalk.py  run_markov_rqe_cliffwalk.py  test_sumo_gui.sh  train_deep_rqe_boxing.py  train_deep_rqe_cliffwalk.py  train_deep_rqe_mappo_boxing.py  train_harl_cliffwalk.py  train_madqn_cliffwalk.py  train_mappo_boxing.py  train_mappo_cliffwalk.py  train_mappo_simple_spread.py  train_marlib_baseline.sh  train_ppo_cliffwalk.py  train_ppo_simple_spread.py  train_psro_rqe_cliffwalk.py  train_rqe_boxing.py  train_rqe_cliffwalk.py  train_rqe_mappo_cliffwalk.py  train_rqe_simple_spread.py  train_sb3_mappo.sh  train_sumo.sh  train_traffic.sh  train_true_mappo_simple_spread.py  train_true_rqe_boxing.py  train_true_rqe_cliffwalk.py  train_true_rqe_ppo.sh  train_true_rqe_simple_spread.py
src/: __init__.py  compare_learning_curves.py  compare_practical_vs_true_rqe.py  create_comparison_plots.py  demo_sumo.py  diagnose_rqe_issues.py  eval_checkpoints.py  eval_sb3_baseline.py  eval_sb3_checkpoints.py  generate_figures.py  quick_cliff_test.py  record_sumo.py  record_sumo_plot.py  replicate_paper_figure2.py  test_cliff_walk.py  train.py  train_marlib_baseline.py  train_sb3_baseline.py  train_sb3_mappo.py  train_single_agent.py  train_sumo.py  train_traffic.py  visualize.py  visualize_agents.py  visualize_cliff_walk.py  visualize_sumo.py
tests/: test_rqe_mappo.py  (+1 more)
(+47 files in other folders)
