[project]
name = "rqe-mappo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.3.1",
    "attrs>=25.4.0",
    "click>=8.3.0",
    "gymnasium>=1.2.2",
    "idna>=3.11",
    "imageio>=2.37.2",
    "matplotlib>=3.10.7",
    "mpyq>=0.2.5",
    "numpy>=2.3.4",
    "pbr>=7.0.3",
    "pettingzoo[mpe]>=1.25.0",
    "pillow>=12.0.0",
    "pluggy>=1.6.0",
    "portpicker>=1.6.0",
    "probscale>=0.2.5",
    "protobuf>=6.33.0",
    "py>=1.11.0",
    "pygame>=2.6.1",
    "pymongo>=4.15.4",
    "pyparsing>=3.2.5",
    "pytest>=9.0.1",
    "python-dateutil>=2.9.0.post0",
    "pyyaml==5.3.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sacred>=0.8.7",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "six>=1.17.0",
    "sk-video>=1.1.10",
    "snakeviz>=2.2.2",
    "stable-baselines3>=2.7.0",
    "sumo-rl>=1.4.5",
    "supersuit>=3.10.0",
    "tensorboard>=2.20.0",
    "tensorboard-logger>=0.1.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "tornado>=6.5.2",
    "tqdm>=4.67.1",
    "urllib3>=2.5.0",
    "websocket-client>=1.9.0",
    "whichcraft>=0.6.1",
    "wrapt>=1.17.3",
]
